--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@ng-icons/lucide": "^25.3.1",
     "@ng-icons/material-icons": "^25.3.1",
     "@nx/angular": "16.9.0",
+    "@spartan-ng/ui-alertdialog-brain": "0.0.1-alpha.305",
     "@spartan-ng/ui-core": "^0.0.1-alpha.305",
+    "@spartan-ng/ui-dialog-brain": "0.0.1-alpha.305",
     "@spartan-ng/ui-radiogroup-brain": "0.0.1-alpha.305",
     "@spartan-ng/ui-separator-brain": "0.0.1-alpha.305",
     "class-variance-authority": "^0.6.0",
