--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -32,6 +32,12 @@
       ],
       "@spartan-ng/ui-radiogroup-helm": [
         "src/libs/ui/ui-radiogroup-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-dialog-helm": [
+        "src/app/libs/ui/ui-dialog-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-alertdialog-helm": [
+        "src/libs/ui/ui-alertdialog-helm/src/index.ts"
       ]
     }
   },
