--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,39 +10,27 @@
     "importHelpers": true,
     "target": "es2022",
     "module": "esnext",
-    "lib": [
-      "es2020",
-      "dom"
-    ],
+    "lib": ["es2020", "dom"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@spartan-ng/ui-button-helm": [
-        "src/libs/ui/ui-button-helm/src/index.ts"
+      "@spartan-ng/ui-alertdialog-helm": [
+        "src/libs/ui/ui-alertdialog-helm/src/index.ts"
       ],
-      "@spartan-ng/ui-separator-helm": [
-        "src/libs/ui/ui-separator-helm/src/index.ts"
-      ],
-      "@spartan-ng/ui-label-helm": [
-        "src/libs/ui/ui-label-helm/src/index.ts"
-      ],
-      "@spartan-ng/ui-input-helm": [
-        "src/libs/ui/ui-input-helm/src/index.ts"
-      ],
-      "@spartan-ng/ui-radiogroup-helm": [
-        "src/libs/ui/ui-radiogroup-helm/src/index.ts"
-      ],
+      "@spartan-ng/ui-button-helm": ["src/libs/ui/ui-button-helm/src/index.ts"],
       "@spartan-ng/ui-dialog-helm": [
         "src/app/libs/ui/ui-dialog-helm/src/index.ts"
       ],
-      "@spartan-ng/ui-alertdialog-helm": [
-        "src/libs/ui/ui-alertdialog-helm/src/index.ts"
+      "@spartan-ng/ui-input-helm": ["src/libs/ui/ui-input-helm/src/index.ts"],
+      "@spartan-ng/ui-label-helm": ["src/libs/ui/ui-label-helm/src/index.ts"],
+      "@spartan-ng/ui-radiogroup-helm": [
+        "src/libs/ui/ui-radiogroup-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-separator-helm": [
+        "src/libs/ui/ui-separator-helm/src/index.ts"
       ]
     }
   },
-  "exclude": [
-    "node_modules",
-    "tmp"
-  ]
+  "exclude": ["node_modules", "tmp"]
 }
